--- a/App Store Strategy Game Analysis.ipynb
+++ b/App Store Strategy Game Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>Analysis of Games from the Apple Store</center>\n",
+    "# Analysis of Games from the Apple Store\n",
     "\n",
     " > This dataset was taken from [Kaggle](https://www.kaggle.com/tristan581/17k-apple-app-store-strategy-games) and it was collected on the 3rd of August 2019 using the [iTunes API](https://affiliate.itunes.apple.com/resources/documentation/itunes-store-web-service-search-api/) and the [App Store sitemap](https://apps.apple.com/us/genre/ios-games/id6014).\n",
     " \n",
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>1. Reading and Understanding the Data</center>"
+    "# 1. Reading and Understanding the Data"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>2. Exploratory Analysis</center>"
+    "# 2. Exploratory Analysis"
    ]
   },
   {
@@ -492,13 +492,6 @@
     "Another important thing to check is if there are any **duplicate ID's** and, if so, remove them. Also, the last two column are not *datetime* type, which they should be.\n",
     "\n",
     "The dataframe will be sorted by the \"User Rating Count\" column. This column will be our guide to conclude if a game is successful or not."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# <center>2. Exploratory Analysis</center>"
    ]
   },
   {
@@ -1750,7 +1743,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>3. Graphics and Insights</center>"
+    "# 3. Graphics and Insights"
    ]
   },
   {
