--- a/App Store Strategy Game Analysis.ipynb
+++ b/App Store Strategy Game Analysis.ipynb
@@ -393,31 +393,7 @@
    "source": [
     "# Create the dataframe and check the first 8 rows\n",
     "app_df = pd.read_csv(\"appstore_games.csv\")\n",
-    "app_df.head(8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['URL', 'ID', 'Name', 'Subtitle', 'Icon URL', 'Average User Rating',\n",
-       "       'User Rating Count', 'Price', 'In-app Purchases', 'Description',\n",
-       "       'Developer', 'Age Rating', 'Languages', 'Size', 'Primary Genre',\n",
-       "       'Genres', 'Original Release Date', 'Current Version Release Date'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "app_df.columns"
+    "app_df.head()"
    ]
   },
   {
@@ -725,70 +701,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Average User Rating</th>\n",
-       "      <th>User Rating Count</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>In-app Purchases</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Developer</th>\n",
-       "      <th>Age Rating</th>\n",
-       "      <th>Languages</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>Primary Genre</th>\n",
-       "      <th>Genres</th>\n",
-       "      <th>Original Release Date</th>\n",
-       "      <th>Current Version Release Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [ID, Name, Average User Rating, User Rating Count, Price, In-app Purchases, Description, Developer, Age Rating, Languages, Size, Primary Genre, Genres, Original Release Date, Current Version Release Date]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check if there are any other missing values in those columns\n",
-    "app_df_cut.loc[(app_df_cut[\"User Rating Count\"].isnull()) | (app_df_cut[\"Average User Rating\"].isnull())]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -807,70 +719,6 @@
     "# Get the column \"In-app Purchases\" where the value is NaN and set it to zero\n",
     "app_df_cut.loc[app_df_cut[\"In-app Purchases\"].isnull(),\n",
     "               \"In-app Purchases\"] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Average User Rating</th>\n",
-       "      <th>User Rating Count</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>In-app Purchases</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Developer</th>\n",
-       "      <th>Age Rating</th>\n",
-       "      <th>Languages</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>Primary Genre</th>\n",
-       "      <th>Genres</th>\n",
-       "      <th>Original Release Date</th>\n",
-       "      <th>Current Version Release Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [ID, Name, Average User Rating, User Rating Count, Price, In-app Purchases, Description, Developer, Age Rating, Languages, Size, Primary Genre, Genres, Original Release Date, Current Version Release Date]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check if there are any NaN value in the \"In-app Purchases\" column\n",
-    "app_df_cut.loc[app_df_cut[\"In-app Purchases\"].isnull()]"
    ]
   },
   {
@@ -1285,70 +1133,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Average User Rating</th>\n",
-       "      <th>User Rating Count</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>In-app Purchases</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Developer</th>\n",
-       "      <th>Age Rating</th>\n",
-       "      <th>Languages</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>Primary Genre</th>\n",
-       "      <th>Genres</th>\n",
-       "      <th>Original Release Date</th>\n",
-       "      <th>Current Version Release Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [ID, Name, Average User Rating, User Rating Count, Price, In-app Purchases, Description, Developer, Age Rating, Languages, Size, Primary Genre, Genres, Original Release Date, Current Version Release Date]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check if there are any null values on the price column\n",
-    "app_df_cut.loc[app_df_cut[\"Price\"].isnull()]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1364,70 +1148,6 @@
    "source": [
     "# Drop the rows with NaN values in the \"Languages\" column\n",
     "app_df_cut = app_df_cut.drop(app_df_cut.loc[app_df_cut[\"Languages\"].isnull()].index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Average User Rating</th>\n",
-       "      <th>User Rating Count</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>In-app Purchases</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Developer</th>\n",
-       "      <th>Age Rating</th>\n",
-       "      <th>Languages</th>\n",
-       "      <th>Size</th>\n",
-       "      <th>Primary Genre</th>\n",
-       "      <th>Genres</th>\n",
-       "      <th>Original Release Date</th>\n",
-       "      <th>Current Version Release Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [ID, Name, Average User Rating, User Rating Count, Price, In-app Purchases, Description, Developer, Age Rating, Languages, Size, Primary Genre, Genres, Original Release Date, Current Version Release Date]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check if there are any null values on the \"Languages\" column\n",
-    "app_df_cut.loc[app_df_cut[\"Languages\"].isnull()]"
    ]
   },
   {
@@ -1696,7 +1416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Transform the the string dates into datetime objects\n",
+    "# Transform the string dates into datetime objects\n",
     "app_df_clean[\"Original Release Date\"] = pd.to_datetime(app_df_clean[\"Original Release Date\"])\n",
     "app_df_clean[\"Current Version Release Date\"] = pd.to_datetime(app_df_clean[\"Current Version Release Date\"])"
    ]
@@ -1785,7 +1505,8 @@
     "size = sns.swarmplot(x=years, y=size, palette=palette)\n",
     "size.set_ylabel(\"Size (in MB)\", fontsize=16)\n",
     "size.set_xlabel(\"Original Release Date\", fontsize=16)\n",
-    "size.set_title(\"Time Evolution of the Apps' Sizes\", fontsize=20);"
+    "size.set_title(\"Time Evolution of the Apps' Sizes\", fontsize=20)\n",
+    "plt.show()"
    ]
   },
   {
@@ -1963,7 +1684,8 @@
     "in_app_purchases_vis.set_xlabel(\"Game Price (in US dollars)\", fontsize=16)\n",
     "in_app_purchases_vis.set_xticklabels(in_app_purchases_vis.get_xticklabels(), fontsize=12, rotation=45)\n",
     "in_app_purchases_vis.set_ylabel(\"In-app Purchases Available\", fontsize=16)\n",
-    "in_app_purchases_vis.set_title(\"Quantity of In-app Purchases per Game Price\", fontsize=20);"
+    "in_app_purchases_vis.set_title(\"Quantity of In-app Purchases per Game Price\", fontsize=20)\n",
+    "plt.show()"
    ]
   },
   {
